fix scroll to the right & fix overflow1.js

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,5 +1,6 @@
 html {
   overflow-x: hidden;
+  position: relative;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   line-height: 1.3;
   overflow-x: hidden;
+  position: relative;
 }
 
 a {
